syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.healthapp.heartrate";  // Your desired package
option java_outer_classname = "HeartRateProto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

// A service to handle requests and return the response ( heart rate of requested patient id)
// And also a method to stream the current heart rate continuously
service HeartRateService{
  rpc GetCurrentHeartRate(HeartRateRequest) returns (HeartRateResponse);
  rpc StreamHeartRate(HeartRateRequest) returns (stream HeartRateResponse);
  rpc GetAllPatients(google.protobuf.Empty) returns (stream PatientResponse);
  rpc GetHeartRateHistory(HeartRateRequest) returns (stream HeartRateLogResponse);
}

// The request passed in order to get a response defined bellow
message HeartRateRequest{
  int32 patient_id = 1; // Unique patient identifier
}

// The response to return the bpm and the time stamp
message HeartRateResponse{
  int32 bpm = 1;
  string timestamp = 2;
  string status = 3; // Optional: "OK" , "ALERT", "LOW" , "HIGH"
  string patient_name = 4;
}

message HeartRateLogResponse{
  int32 bpm = 1;
  string timestamp = 2;
}

message PatientResponse{
  int32 patientId = 1;
  string name = 2;
  string surname = 3;
}